:sparkles: Funcionalidad para cancelar reservas
