# api/swagger/swagger.yaml
@@ -69,7 +69,26 @@ paths:
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ReservationError"
+            $ref: "#/definitions/Error"
+    delete:
+      description: Reserva una sala de la biblioteca
+      operationId: cancel
+      parameters:
+        - name: cancellation
+          in: body
+          description: Datos de la reserva
+          required: true
+          schema:
+            $ref: "#/definitions/CancelRequest"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/CancelResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/Error"
 
 definitions:
   Room:
@@ -147,6 +166,20 @@ definitions:
           type: string
         password:
           description: Contrasela correspondiente al uvus.
+          type: string
+  CancelRequest:
+      required:
+        - reservation
+      properties:
+        reservation: 
+          description: ID de la reserva
+          type: string
+  CancelResponse:
+      required:
+        - reservation
+      properties:
+        reservation: 
+          description: ID de la reserva
           type: string
   Error:
     required:
